<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <include layout="@layout/appbaar">

    </include>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="30sp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="30dp">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_shape"
        android:hint="@string/full_name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:paddingStart="20dp"
        android:textSize="20sp">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_shape"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:textSize="20dp">

    </androidx.appcompat.widget.AppCompatEditText>
    
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
       android:background="@drawable/button_shape"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/password"
        android:textSize="20sp"
        android:paddingStart="20dp">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_shape"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/confirm_password"
        android:textSize="20sp"
        android:paddingStart="20dp">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_button_shape1"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="30dp"
        android:onClick="SignUp"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:text="@string/sign_up"
        tools:ignore="UsingOnClickInXml">


    </androidx.appcompat.widget.AppCompatButton>


</androidx.appcompat.widget.LinearLayoutCompat>